Changes in restaurant and calculater

--- a/calculater/calculater.html
+++ b/calculater/calculater.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="keys">
 			<button onclick="clearResult()">C</button>
-			<button onclick="backspace()">CE</button>
+			<button onclick="backspace()">back</button>
 			<button onclick="addToResult('(')"> ( </button>
 			<button onclick="addToResult(')')"> ) </button>
 			<button onclick="addToResult('7')">7</button>
@@ -32,6 +32,6 @@
 			<button onclick="addToResult('+')">+</button>
 		</div>
 	</div>
-	<script src="script.js"></script>
+
 </body>
 </html>
