--- a/teacozyproject/images/tea_cozy.html
+++ b/teacozyproject/images/tea_cozy.html
@@ -1,68 +1,107 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Tea Cozy</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header>
-      <nav>
-        <img src="../images/logo.png" alt="Tea Cozy logo">
-        <ul class="menuhead">
-          <li><a href="#mission">Our Mission</a></li>
-          <li><a href="#featured-tea">Featured Tea</a></li>
-          <li><a href="#locations">Locations</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div class="backimg">
+
+<head>
+  <title>Tea Cozy</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header>
+    <nav>
+      <img src="../images/logo.png" alt="Tea Cozy logo">
+      <ul class="menuhead">
+        <li><a href="#mission">Our Mission</a></li>
+        <li><a href="#featured-tea">Featured Tea</a></li>
+        <li><a href="#locations">Locations</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="backimg">
     <img src="../images/background.png" alt="background img">
   </div>
-    <section id="mission">
-      <div class="mission-text">
+  <section id="mission">
+    <div class="mission-text">
       <h2>Our Mission</h2>
       <p>Handpicked,Artisanlly Curated,Free Range,Sustanable,Small Batch,Fair Trade,Organic Tea</p>
 
     </div>
+
+  </section>
+
+  <section id="featured">
+    <h2>Tea of the Month</h2>
+    <h4>What's Steeping at The Tea Cozy?</h4>
+    <div class="featured-items">
+        <div class="item">
+            <img src="../images/berryblitz.png" alt="">
+            <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <div class="item">
+            <img src="../images/spiced-rum.png" alt="">
+            <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="item">
+            <img src="../images/donut.png" alt="">
+            <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="item">
+            <img src="../images/myrtle-ave.png" alt="">
+            <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="item">
+            <img src="../images/bedford-bizarre.png" alt="">
+            <h4>Bedford Bizarre Tea</h4>
+        </div>
+    </div>
+</section>
+
+
+
+  <section>
+
   
+      <section id="locations">
+        <h2>Locations</h2>
+
+        <div class="our-locations">
+            <div class="location">
+                <h3>Downtown</h3>
+                <h4>384 West 4th St</h4>
+                <h4>Suite 108</h4>
+                <h4>Portland, Maine</h4>
+            </div>
+            <div class="location">
+                <h3>East Bayside</h3>
+                <h4>3433 Phisherman's Avenue</h4>
+                <h4>(Northwest Corner)</h4>
+                <h4>Portland, Maine</h4>
+            </div>
+
+            <div class="location">
+                <h3>Oakdale</h3>
+                <h4>515 Crescent Avenue</h4>
+                <h4>Second Floor</h4>
+                <h4>Portland, Maine</h4>
+            </div>
+        </div>
     </section>
-  
-    <div class="tea-month">
-
-      <h2> Tea of the Month</h2>
-      <h3>What's Stepping at The Tea cozy?</h3>
-
+</main>
     </div>
+  </section>
 
-    <div class="image-container">
-      <div class="item item-1">
-        <img src="../images/berryblitz.png" alt="Image 1">
-        <p>Text for Image 1</p>
-      </div>
-      <div class="item item-2">
-        <img src="../images/spiced-rum.png" alt="Image 2">
-        <p>Text for Image 2</p>
-      </div>
-      <div class="item item-3" >
-        <img src="../images/donut.png" alt="Image 3">
-        <p>Text for Image 3</p>
-      </div>
-      </div>
-      <div class="image-container2">
-          <div class="item item-4">
-            <img src="../images/myrtle-ave.png" alt="Image 4">
-            <p>Text for Image 4</p>
-          </div>
-          <div class="item item-5">
-            <img src="../images/bedford-bizarre.png" alt="Image 5">
-            <p>Text for Image 5</p>
-          </div>
-       </div>
-  
-    <div id="locations">
-      <h2>Locations</h2>
 
-      
-    </div>
-  
-    
+ <!--footer-->
+ <footer>
+  <section class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+  </section>
+  <p class="copyright">
+      copyright The Tea Cozy 2021
+  </p>
+
+</body>
+
+</html>
